--- a/style/partials/_latestPost.scss
+++ b/style/partials/_latestPost.scss
@@ -76,7 +76,7 @@
 
   .text {
     position: relative;
-    z-index: 4;
+    z-index: 9;
     width: 100%;
     padding: units(1);
 
